garnet: parts: Add AdBlocker functionality with root-based hosts file management
- Implement AdBlocker settings activity with enable/disable toggle
- Add automatic hosts file updates from StevenBlack/hosts repository
- Support manual hosts file import from local files
- Include system partition write access validation
- Add comprehensive root access checking and error handling
- Provide blocked domains count and last update tracking
- Create automatic backup/restore functionality for original hosts file